feat: update hint messages to improve user experience in Game class